fix phone input  alignment issue (#130)

--- a/src/components/common/DatePicker/DatePicker.scss
+++ b/src/components/common/DatePicker/DatePicker.scss
@@ -18,7 +18,7 @@
   .InputIcon {
     display: flex;
     justify-content: center;
-    width: 10%;
+    width: 20%;
   }
   .DateInput {
     height: 40px;
